<resources>
    <string name="app_name">CSCI571HW9</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ForecastSearch">Forecast Search</string>
    <string name="Street">Street</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="Select">Select State</string>
    <string name="Degree">Degree</string>
    <string name="About">About</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="Celsius">Celsius</string>
    <string name="SearchButton">Search</string>
    <string name="ClearButton">Clear</string>
    <string name="PowerText">Powered by:</string>
    <string name="PowerLinkText">FORECAST.IO</string>

    <string-array name="us_states">
        <item>Select</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="title_activity_author_screen">AuthorScreen</string>
    <string name="AuthorName">Name: Yao Wang</string>
    <string name="StudentId">Student Id: 2734918593</string>
    <string name="AuthorImage">AuthorImage</string>
    <string name="title_activity_maps">Map</string>
    <string name="aeris_client_id">ciRf71xxGkdzEb3WOLev5</string>
    <string name="aeris_client_secret">UchLs5TJZwbPuh5uzZUN8yOlH7MeVUzCsvkvFL87</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_main_result">MainResult</string>
    <string name="DetailButton">MORE DETAILS</string>
    <string name="DetaiButton">MORE DETAIL</string>
    <string name="MapButton">VIEW MAP</string>
    <string name="Summary">Summary</string>
    <string name="Faceboo">Facebook</string>
    <string name="DetailKeyText">Precipitation\nChance of Rain\nWind Speed\nDew Point\nHumidity\nVisibility\nSunrise\nSunset</string>
    <string name="title_activity_detail_result">DetailResult</string>
    <string name="google_maps_key">AIzaSyCywvWthWOXfgodWQS_MsaWheJdQridcW0</string>
    <string name="TimeHead">Time</string>
    <string name="SummaryHead">Summary</string>
    <string name="TempHead">Temp</string>
    <string name="ExpBtnImg">ExpBtnImg</string>
    <string name="facebook_app_id">468137250046349</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_map">ShowMap</string>
    <string name="title_activity_maps1">Map</string>
</resources>
